--- a/Curriculoatualizado.html
+++ b/Curriculoatualizado.html
@@ -3,24 +3,29 @@
 
 <head>
     <style>
-        ul {
+        .projetos {
             display: flex;
             flex-wrap: wrap;
             margin: 0;
             padding: 0;
             list-style: none;
+            background-color: #000033;
+            border: 5px;
         }
 
         li {
-            width: 200px;
+            width: 300px;
             margin: 15px
         }
+
+        
     </style>
 </head>
 
 <body>
-    <div class=Folha>
-        <div class=estrutura>
+
+    <div class="folha">
+        <div class="estrutura">
             <img src=https://scontent.fpoa28-1.fna.fbcdn.net/v/t1.0-9/70635447_2483214508393291_5947822276601708544_n.jpg?_nc_cat=104&_nc_sid=174925&_nc_ohc=umBy0oHTfxwAX_eIrAy&_nc_ht=scontent.fpoa28-1.fna&oh=01175f0bd4ce578b971c4ff11f73e817&oe=5F9B0119
                 id="profilepic" alt="fotocurriculo" width="200" height="200">
 
@@ -35,7 +40,7 @@
                 <h1>
                     Dados Pessoais
                 </h1>
-                <hr class="Titulos">
+                <hr class="titulos">
                 <h3 class="dados">
                     Nome Completo: Gabriel Nunes Gomes
                     <br>
@@ -60,7 +65,7 @@
                 <h1>
                     Objetivo
                 </h1>
-                <hr class="Titulos">
+                <hr class="titulos">
 
                 Procuro novos desafios profissionais e uma efetivação no mercado, tendo o desenvolvimento de minhas
                 habilidades e a geração de resultados como objetivo, ser um grande programador e futuro desenvolvedor,
@@ -69,7 +74,7 @@
                 <h1>
                     Formação
                 </h1>
-                <hr class="Titulos">
+                <hr class="titulos">
                 <ul>
 
                     Cursando Ensino Medio
@@ -80,7 +85,7 @@
                 <h1>
                     Experiência
                 </h1>
-                <hr class="Titulos">
+                <hr class="titulos">
                 <ul>
                     Empresa: Unidasul Dist Alimentíia S.A. Filial 02
                     Cargo: Empacotador
@@ -98,8 +103,7 @@
                 <h1>
                     Meus Projetos
                 </h1>
-                <hr class="Titulos">
-                <ul>
+                <div class="projetos" <ul>
                     <li>
                         <h2>
                             Counter Strike : GO
@@ -195,8 +199,8 @@
                         </p>
                     </li>
 
-                </ul>
-
+                    </ul>
+                </div>
 
 
 
