--- a/Curriculoatualizado.html
+++ b/Curriculoatualizado.html
@@ -11,14 +11,13 @@
             list-style: none;
             background-color: #000033;
             border: 5px;
+            border-radius: 50px;
         }
 
         li {
             width: 300px;
             margin: 15px
         }
-
-        
     </style>
 </head>
 
