--- a/Curriculoatualizado.html
+++ b/Curriculoatualizado.html
@@ -3,20 +3,20 @@
 
 <head>
     <style>
-        .projetos {
+        .lista-projetos {
             display: flex;
             flex-wrap: wrap;
             margin: 0;
             padding: 0;
             list-style: none;
-            background-color: #000033;
-            border: 5px;
-            border-radius: 50px;
         }
 
         li {
             width: 300px;
-            margin: 15px
+            margin: 15px;
+            background-color: #000033;
+            border: 5px;
+            border-radius: 10px;
         }
     </style>
 </head>
@@ -102,8 +102,8 @@
                 <h1>
                     Meus Projetos
                 </h1>
-                <div class="projetos" <ul>
-                    <li>
+                <ul class="lista-projetos">
+                    <li class="projetos">
                         <h2>
                             Counter Strike : GO
                         </h2>
@@ -199,7 +199,6 @@
                     </li>
 
                     </ul>
-                </div>
 
 
 
