--- a/Curriculoatualizado.html
+++ b/Curriculoatualizado.html
@@ -15,8 +15,15 @@
             width: 300px;
             margin: 15px;
             background-color: #000033;
-            border: 5px;
+            border: 10px;
             border-radius: 10px;
+        }
+
+        img {
+            border-radius: 300px;
+            margin-left: 350px;
+            border: 20px;
+            border-color: black;
         }
     </style>
 </head>
