--- a/Curriculoatualizado.html
+++ b/Curriculoatualizado.html
@@ -21,7 +21,8 @@
 
         img {
             border-radius: 300px;
-            margin-left: 350px;
+            margin-left: 500px;
+            margin-top: 20px;
             border: 20px;
             border-color: black;
         }
