--- a/index.html
+++ b/index.html
@@ -84,9 +84,15 @@
                 <hr class="titulos">
                 <ul>
 
-                    Cursando Ensino Medio
-                    Curso de Elérica Eletrônica (Predial, Industrial, Manutenção,Automotiva.)
-                    Curso de Imformática e Técnico em Informática (Windows, Word, Excel, Power Point, Internet.)
+                    <p>
+                        Cursando Ensino Medio
+                    </p>
+                    <p>
+                        Curso de Elérica Eletrônica (Predial, Industrial, Manutenção,Automotiva.)
+                    </p>
+                    <p>
+                        Curso de Imformática e Técnico em Informática (Windows, Word, Excel, Power Point, Internet.)
+                    </p>Curso de Imformática e Técnico em Informática (Windows, Word, Excel, Power Point, Internet.)
                 </ul>
 
                 <h1>
@@ -94,17 +100,35 @@
                 </h1>
                 <hr class="titulos">
                 <ul>
-                    Empresa: Unidasul Dist Alimentíia S.A. Filial 02
-                    Cargo: Empacotador
-                    Período: 22/11/2014 - 21/03/2015
+                        <p>
+                            Empresa: Unidasul Dist Alimentíia S.A. Filial 02
+                        </p>
+                        <p>
+                            Cargo: Empacotador
+                        </p>
+                        <p>
+                            Período: 22/11/2014 - 21/03/2015
+                        </p>
 
-                    Empresa: InterCement Brasil S.A
-                    Cargo: Aprendiz
-                    Período: 05/08/2015 - 27/07/2017
+                        <p>
+                            Empresa: InterCement Brasil S.A
+                        </p>
+                        <p>
+                            Cargo: Aprendiz
+                        </p>
+                        <p>
+                            Período: 05/08/2015 - 27/07/2017
+                        </p>
 
-                    Empresa: Scheffer Soluções em Marketing
-                    Cargo: Vendedor
-                    Período: 05/05/2019 - 26/05/2020
+                        <p>
+                            Empresa: Scheffer Soluções em Marketing
+                        </p>
+                        <p>
+                            Cargo: Vendedor
+                        </p>
+                        <p>
+                            Período: 05/05/2019 - 26/05/2020
+                        </p>
                 </ul>
 
                 <h1>
