--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         li {
             width: 300px;
             margin: 15px;
-            background-color: #000033;
+            background-color: #f388ac;
             border: 10px;
             border-radius: 10px;
         }
@@ -100,6 +100,8 @@
                 </h1>
                 <hr class="titulos">
                 <ul>
+                    <li>
+
                         <p>
                             Empresa: Unidasul Dist Alimentíia S.A. Filial 02
                         </p>
@@ -109,7 +111,8 @@
                         <p>
                             Período: 22/11/2014 - 21/03/2015
                         </p>
-
+                    </li>
+                    <li>
                         <p>
                             Empresa: InterCement Brasil S.A
                         </p>
@@ -119,7 +122,8 @@
                         <p>
                             Período: 05/08/2015 - 27/07/2017
                         </p>
-
+                    </li>
+                    <li>
                         <p>
                             Empresa: Scheffer Soluções em Marketing
                         </p>
@@ -129,6 +133,7 @@
                         <p>
                             Período: 05/05/2019 - 26/05/2020
                         </p>
+                    </li>
                 </ul>
 
                 <h1>
