--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
             background-color: #f388ac;
             border: 10px;
             border-radius: 10px;
+            box-shadow: -5px -10px 3px rgb(36, 40, 41), 6px 9px 5px rgb(36, 40, 41);
+            -webkit-box-shadow: -5px -10px 3px rgb(36, 40, 41), 6px 9px 5px rgb(36, 40, 41);
+            -moz-box-shadow: -5px -10px 3px rgb(36, 40, 41), 6px 9px 5px rgb(36, 40, 41);
+
+
         }
 
         img {
@@ -39,7 +44,7 @@
             <h2 id="nome">
                 Gabriel N. Gomes
             </h2>
-           
+
             </p>
 
             <div class="aba">
